map fullscreen z-index stars and arrows bug fix

--- a/geodirectory-assets/css/map.scss
+++ b/geodirectory-assets/css/map.scss
@@ -668,10 +668,13 @@ div.geodir_map_container.geodir-map-iphone .map_background .triggermap {
     background-color: #ebebeb !important
 }
 
-.body_fullscreen dl.geodir-tab-head {
+.body_fullscreen dl.geodir-tab-head,
+.body_fullscreen .geodir_Star,
+.body_fullscreen .geodir-direction-nav a {
   z-index: 0;
 }
-.body_fullscreen .geodir_more_info i {
+.body_fullscreen .geodir_more_info i,
+.body_fullscreen .geodir-company_info i {
   transform: none;
 }
 .body_fullscreen .b_signin {
